# openclaw-skils

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  update-readme.yml
scripts/: update_readme.py  validate_skills.py
skills/fal/: SKILL.md  requirements.txt
skills/fal/scripts/: skill_fal.py
skills/kling-video/: SKILL.md
skills/kling-video/scripts/: kling.py
tests/: test_validate_skills.py
