[project]
name = "openclaw-skils"
version = "0.1.0"
description = "A collection of OpenClaw skills"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "T201",  # allow print statements (CLI tools)
    "S101",  # allow assert (used in tests)
    "S603",  # allow subprocess calls (CLI tools)
    "S607",  # allow partial executable paths
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["skills"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
